src/objects/edynamics__caSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings specific to the ChatterArchive application package</description>
    <fields>
        <fullName>edynamics__Admin_Email__c</fullName>
        <inlineHelpText>Administrative email address for notifications</inlineHelpText>
        <label>Admin Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__CustomerLogo__c</fullName>
        <label>CustomerLogo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>edynamics__Disable_Triggers__c</fullName>
        <description>A comma separated string of triggers that are disabled for the instance.  Supported triggers: FeedCommentAfter, FeedItemAfter, UserStatusBefore</description>
        <label>Disable Triggers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>edynamics__EnableGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, enables the app to function only for the group name specified.</description>
        <label>EnableGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edynamics__GroupName__c</fullName>
        <description>If enable group is checked you must specify a group name here.</description>
        <label>GroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__Include_File_Attachments__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, file attachments from Chatter posts will be included in compliance email (if uploaded to Chatter post by user)</inlineHelpText>
        <label>Include File Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edynamics__Journaling_Email__c</fullName>
        <description>Journaling email address, as defined by the client, for ChatterArchive</description>
        <inlineHelpText>Please enter your journaling address (where you want ChatterArchive to send email to)</inlineHelpText>
        <label>Journaling Email</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, email to journaling mailbox functionality is enabled</inlineHelpText>
        <label>Send Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edynamics__SubjectSuffix__c</fullName>
        <description>When set, AFC adds this field to the end of the subject of each journaling email</description>
        <label>Subject Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edynamics__Write_to_Custom_Object__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, Archive for Chatter will write a copy of each chatter post/comment to custom SFDC object for reporting purposes.</inlineHelpText>
        <label>Write to Custom Object?</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Archive Settings</label>
</CustomObject>